@@ -39,9 +39,6 @@ Glines:
         - Configure the playing field size and ball number (bug
           83532).
         - Remember the window size.
-	- Fix the exposure bug that shows up when another window is dragged
-	  across it.
-	- Make the "Next Balls" label bold again.
 
 Gnect:
         - Graphics (could we share some with iagno/gataxx)
