@@ -1,3 +1,8 @@
+2004-01-07  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* glines.c: Minor bug fixes fom previous work: "Next Balls" is
+	bold again. The expose code doesn't miss tiles anymore.
+
 2004-01-06  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* glines.schemas.in: Set balls.svg to be the new default since it
